// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSelectable custom options with data 1`] = `
<div
  class="euiSelectable"
>
  <p
    class="euiScreenReaderOnly"
    id="generated-id-instructions"
  >
    Filter options
  </p>
  <div
    class="euiSelectableList"
  >
    <div
      data-eui="EuiAutoSizer"
    >
      <div
        class="euiSelectableList__list"
        style="position:relative;height:96px;width:600px;overflow:auto;-webkit-overflow-scrolling:touch;will-change:transform;direction:ltr"
      >
        <ul
          style="height:96px;width:100%"
        >
          <li
            aria-checked="false"
            aria-posinset="1"
            aria-selected="false"
            aria-setsize="3"
            class="euiSelectableListItem euiSelectableListItem--paddingSmall"
            id="generated-id_option-0"
            role="option"
            style="position:absolute;left:0;top:0;height:32px;width:100%"
            title="Titan"
          >
            <span
              class="euiSelectableListItem__content"
            >
              <span
                class="euiSelectableListItem__icon"
                data-euiicon-type="empty"
              />
              <span
                class="euiSelectableListItem__text"
              >
                <span>
                  VI: Titan
                </span>
              </span>
            </span>
          </li>
          <li
            aria-checked="false"
            aria-posinset="2"
            aria-selected="false"
            aria-setsize="3"
            class="euiSelectableListItem euiSelectableListItem--paddingSmall"
            id="generated-id_option-1"
            role="option"
            style="position:absolute;left:0;top:32px;height:32px;width:100%"
            title="Enceladus"
          >
            <span
              class="euiSelectableListItem__content"
            >
              <span
                class="euiSelectableListItem__icon"
                data-euiicon-type="empty"
              />
              <span
                class="euiSelectableListItem__text"
              >
                <span>
                  II: Enceladus
                </span>
              </span>
            </span>
          </li>
          <li
            aria-checked="false"
            aria-posinset="3"
            aria-selected="false"
            aria-setsize="3"
            class="euiSelectableListItem euiSelectableListItem--paddingSmall"
            id="generated-id_option-2"
            role="option"
            style="position:absolute;left:0;top:64px;height:32px;width:100%"
            title="Pandora is one of Saturn's moons, named for a Titaness of Greek mythology"
          >
            <span
              class="euiSelectableListItem__content"
            >
              <span
                class="euiSelectableListItem__icon"
                data-euiicon-type="empty"
              />
              <span
                class="euiSelectableListItem__text"
              >
                <span>
                  XVII: Pandora is one of Saturn's moons, named for a Titaness of Greek mythology
                </span>
              </span>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSelectable errorMessage prop can render an element as the message 1`] = `
<div
  class="euiSelectable"
>
  <div
    class="euiText euiText--extraSmall euiSelectableMessage"
    id="generated-id_messageContent"
  >
    <div
      class="euiTextColor euiTextColor--subdued"
    >
      <span>
        Element error!
      </span>
    </div>
  </div>
</div>
`;

exports[`EuiSelectable errorMessage prop does not render the message when not defined 1`] = `
<div
  class="euiSelectable"
>
  <p
    class="euiScreenReaderOnly"
    id="generated-id-instructions"
  >
    Filter options
  </p>
  <div
    class="euiSelectableList"
  >
    <div
      data-eui="EuiAutoSizer"
    >
      <div
        class="euiSelectableList__list"
        style="position:relative;height:96px;width:600px;overflow:auto;-webkit-overflow-scrolling:touch;will-change:transform;direction:ltr"
      >
        <ul
          style="height:96px;width:100%"
        >
          <li
            aria-checked="false"
            aria-posinset="1"
            aria-selected="false"
            aria-setsize="3"
            class="euiSelectableListItem euiSelectableListItem--paddingSmall"
            data-test-subj="titanOption"
            id="generated-id_option-0"
            role="option"
            style="position:absolute;left:0;top:0;height:32px;width:100%"
            title="Titan"
          >
            <span
              class="euiSelectableListItem__content"
            >
              <span
                class="euiSelectableListItem__icon"
                data-euiicon-type="empty"
              />
              <span
                class="euiSelectableListItem__text"
              >
                <span>
                  Titan
                </span>
              </span>
            </span>
          </li>
          <li
            aria-checked="false"
            aria-posinset="2"
            aria-selected="false"
            aria-setsize="3"
            class="euiSelectableListItem euiSelectableListItem--paddingSmall"
            id="generated-id_option-1"
            role="option"
            style="position:absolute;left:0;top:32px;height:32px;width:100%"
            title="Enceladus"
          >
            <span
              class="euiSelectableListItem__content"
            >
              <span
                class="euiSelectableListItem__icon"
                data-euiicon-type="empty"
              />
              <span
                class="euiSelectableListItem__text"
              >
                <span>
                  Enceladus
                </span>
              </span>
            </span>
          </li>
          <li
            aria-checked="false"
            aria-posinset="3"
            aria-selected="false"
            aria-setsize="3"
            class="euiSelectableListItem euiSelectableListItem--paddingSmall"
            id="generated-id_option-2"
            role="option"
            style="position:absolute;left:0;top:64px;height:32px;width:100%"
            title="Pandora is one of Saturn's moons, named for a Titaness of Greek mythology"
          >
            <span
              class="euiSelectableListItem__content"
            >
              <span
                class="euiSelectableListItem__icon"
                data-euiicon-type="empty"
              />
              <span
                class="euiSelectableListItem__text"
              >
                <span>
                  Pandora is one of Saturn's moons, named for a Titaness of Greek mythology
                </span>
              </span>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSelectable errorMessage prop does renders the message when defined 1`] = `
<div
  class="euiSelectable"
>
  <div
    class="euiText euiText--extraSmall euiSelectableMessage"
    id="generated-id_messageContent"
  >
    <div
      class="euiTextColor euiTextColor--subdued"
    >
      <p>
        Error!
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiSelectable is rendered 1`] = `
<div
  class="euiSelectable testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`EuiSelectable props allowExclusions 1`] = `
<div
  class="euiSelectable"
/>
`;

exports[`EuiSelectable props height can be forced 1`] = `
<div
  class="euiSelectable"
/>
`;

exports[`EuiSelectable props height can be full 1`] = `
<div
  class="euiSelectable euiSelectable-fullHeight"
/>
`;

exports[`EuiSelectable props isLoading 1`] = `
<div
  class="euiSelectable"
/>
`;

exports[`EuiSelectable props listProps 1`] = `
<div
  class="euiSelectable"
/>
`;

exports[`EuiSelectable props renderOption 1`] = `
<div
  class="euiSelectable"
/>
`;

exports[`EuiSelectable props searchable 1`] = `
<div
  class="euiSelectable"
/>
`;

exports[`EuiSelectable props singleSelection 1`] = `
<div
  class="euiSelectable"
/>
`;

exports[`EuiSelectable should not reset the activeOptionIndex nor isFocused when EuiSelectable is blurred in favour of its popover 1`] = `
Object {
  "activeOptionIndex": 0,
  "isFocused": true,
  "searchValue": "",
  "visibleOptions": Array [
    Object {
      "data-test-subj": "titanOption",
      "label": "Titan",
    },
    Object {
      "label": "Enceladus",
    },
    Object {
      "label": "Pandora is one of Saturn's moons, named for a Titaness of Greek mythology",
    },
  ],
}
`;

exports[`EuiSelectable should not reset the activeOptionIndex nor isFocused when EuiSelectable is blurred in favour of its popover 2`] = `
Object {
  "activeOptionIndex": undefined,
  "isFocused": false,
  "searchValue": "",
  "visibleOptions": Array [
    Object {
      "data-test-subj": "titanOption",
      "label": "Titan",
    },
    Object {
      "label": "Enceladus",
    },
    Object {
      "label": "Pandora is one of Saturn's moons, named for a Titaness of Greek mythology",
    },
  ],
}
`;
